# dav88dev

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmessage  .releaserc.json  404_PAGE_REQUIREMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVERSATION_CONTEXT_SUMMARY.md  CRITICAL_DOC.md  CURRENT_PROJECT_STATE.md  CUSTOM_SCROLL_REMOVAL_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_SECURITY_IMPROVEMENTS.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  Dockerfile.fast  Dockerfile.simple  IMPLEMENTATION_NOTES.md  LICENSE  MOBILE_FIXES_DOCUMENTATION.md  MOBILE_NAV_FIX_DOCUMENTATION.md  NEXT_DAY_SUMMARY.md  NEXT_STEPS.md  QUICK_START.md  README.md  Rocket.toml  SECRETS_QUICK_SETUP.md  SEMANTIC_RELEASE_DEBUG_REPORT.md  SERVER_SETUP.md  ULTIMATE_PLAN.md  WAKE_UP_STATUS.md  WASM_MIGRATION.md  build.sh  coverage.out  deploy.sh  (+33 more)
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md  workflow-settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  deploy.yml  docker-deploy.yml  release.yml  security-scan.yml  semantic-release.yml
backup/20250814_181350/: ci.yml  docker-deploy.yml  release.yml  security-scan.yml  semantic-release.yml  version-check.yml
config/: config.go
docs/: API_REFERENCE.md  AXUM_MIGRATION.md  BUGSNAG_IMPLEMENTATION_SUMMARY.md  BUGSNAG_INTEGRATION.md  BUILD_CLEANUP.md  CONSOLE_ERROR_FIXES.md  DEPLOYMENT_DECISION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SESSION_SUMMARY.md  DEPLOYMENT_WORKFLOW.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PROCESS.md  EXPERIMENTAL_DEMO.md  FRONTEND_BUILD_INTEGRATION.md  FULL_WASM_DOCS_INDEX.md  FULL_WASM_IMPLEMENTATION.md  GITHUB_ACTIONS_COMPLETE_FIX.md  GITHUB_ACTIONS_LEARNINGS.md  GITHUB_BEST_PRACTICES.md  GITHUB_SECRETS_SETUP.md  GIT_WORKFLOW.md  GO_MIGRATION_COMPLETE.md  GO_MIGRATION_PLAN_2025.md  GO_MIGRATION_SECURITY_AUDIT.md  GO_SERVER_ARCHITECTURE.md  LIGHTHOUSE_OPTIMIZATION_PLAN.md  MOBILE_AUDIT_CHECKLIST.md  PAGESPEED_OPTIMIZATION_PLAN.md  PAGESPEED_OPTIMIZATION_RESULTS.md  PRODUCTION_ENV_SECURITY.md  PROJECT_FINAL_STATE.md  PROJECT_STATUS.md  README.md  RUST_TO_GO_MIGRATION_ANALYSIS.md  SECURITY_FIXES_SUMMARY.md  SERVER_SETUP.md  SKILLS_VISUALIZATION.md  SSH_SERVER_ACCESS.md  TEMPLATE_CONVERSION_GUIDE.md  WORKFLOW_FIXES_SUMMARY.md
frontend/: build-frontend.sh  package-lock.json  package.json  test_everything.sh  vite.config.js
frontend/src/css/: style.css
frontend/src/js/: animations.js  effects.js  main.js  navigation.js  skillsVisualization.js  three-scene.js  utils.js
internal/controllers/: cv.go  health.go
internal/middleware/: cache.go  logger.go  metrics.go  ratelimit.go  recovery.go  security.go
internal/models/: cv.go
internal/routes/: api.go
problems/: lighthouse_problems.json  lighthouse_problems_desktop.json
scripts/: enable-ssl.sh  migrate-rust-to-go.sh  oci-server-setup.sh  oci-ubuntu-setup.sh  portfolio-monitor.sh  server-setup.sh  setup-github-secrets.sh  setup-server.sh  test-deployment.sh
sitespeed/mobile/: dav88.dev-20250727T222857.json
src/: config.rs  database_ideas.txt  lib.rs  main.rs  models.rs  utils.rs
src/handlers/: api.rs  health.rs  mod.rs  portfolio.rs  security.rs  static_files.rs
src/services/: assets.rs  database.rs  mod.rs  template.rs
static/: manifest.json  robots.txt  sitemap.xml  sw.js
static/.vite/: manifest.json
static/css/: .gitkeep  style-BAWNKzFL.css  style-BrQIkTa7.css  style-Bsq2ZMaJ.css  style-CB9hs8h4.css  style-CvfD0Hgs.css  style-D8qaB-wy.css  style-DYceje4b.css  style-jgli9l9V.css
static/fonts/: README.md  inter.css
static/images/favicons/: site.webmanifest
static/js/: .gitkeep  animations-BIC1Mt9F.js  animations-C48ezAhs.js  animations-CbDwskvs.js  animations-DjLrVeA8.js  animations-N4gbjH9h.js  animations-bPqBzq6L.js  animations-cgkLa7_G.js  animations-legacy-CArUacqT.js  animations-legacy-CRdrf4EK.js  animations-legacy-DIyhHoZU.js  animations-legacy-Dh8sdn_F.js  animations-legacy-DzlvbOou.js  animations-legacy-MqZ6B2No.js  animations-legacy-WrxUGjrc.js  clean-skills.js  core-BO2Dvv5T.js  core-BTY7B8JG.js  core-DYK5xEL_.js  core-legacy-1hYlYNA0.js  core-legacy-4icS2-8z.js  core-legacy-B21ZGnTX.js  effects-BDNgvF05.js  effects-BMAZWhCU.js  effects-BktARcbG.js  effects-CJ1wnHzr.js  effects-CrzjGVLn.js  effects-legacy-Bvl7Fxt2.js  effects-legacy-CPOJihQi.js  effects-legacy-CgTjyl3g.js  effects-legacy-GJCI5ppn.js  effects-legacy-eUg5h6CC.js  full-wasm-skills.js  main-BcxFU8PU.js  main-D7CpwBhv.js  main-eZdYD6--.js  main-legacy-B7v4priG.js  main-legacy-BAIObS1s.js  main-legacy-BFd7gFVa.js  main-legacy-Bfah7Vxo.js  (+20 more)
static/wasm/: .gitkeep
templates/: 404.html  500.html  index.html  index.html.tera
templates/partials/: footer.html  navigation.html  threejs-setup.html
test-deploy/deploy-package/: deploy.sh
test-deploy/test-deploy/deploy-package/: personal_website  portfolio.service
wasm-frontend/: Cargo.toml
wasm-frontend/src/: clean_skills_renderer.rs  full_wasm_renderer.rs  lib.rs  pure_rust_renderer.rs  simple_skills_renderer.rs  three_bindings.rs
