[package]
name = "personal_website"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework - Axum for blazing fast async performance
axum = { version = "0.7", features = ["macros"] }
# Multi-threaded tokio runtime for maximum performance
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "fs", "signal"] }
# High-performance memory allocator
mimalloc = { version = "0.1", default-features = false }
# CPU detection for runtime optimization
num_cpus = "1.16"
# Template engine
tera = "1.19"
# HTTP server with HTTP/2 support
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
# Static file serving and middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip", "compression-br"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Tracing for observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# HTTP status codes and headers
http = "1.0"
# Async utilities
futures = "0.3"
# For future database work
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }