[package]
name = "wasm-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Math and 3D graphics
glam = "0.27"
nalgebra = "0.33"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Node",
  "EventTarget",
  "MouseEvent",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "WebGlRenderingContext",
  "DomRect",
  "CssStyleDeclaration",
]

# Optional: For direct 3D rendering (alternative to Three.js)
# three-d = "0.17"
# wgpu = "0.19"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Allow deprecated warnings for now
[lints.rust]
deprecated = "allow"